			Removals:
				lib.db.actions_acme.do__AcmeV2_AcmeAuthorization__acme_server_trigger
				web.views_admin.acme_authorization.acme_server_trigger
				route_name="admin:acme_authorization:focus:acme_server:trigger"
				route_name="admin:acme_authorization:focus:acme_server:trigger|json"
				"/acme-authorization/{@id}/acme-server/trigger"
				"/acme-authorization/{@id}/acme-server/trigger.json"



0.4.0
- 2020/08/06
- Added routes for auditing certificate procurement
    `/acme-order/{ID}/audit`
    `/acme-order/{ID}/audit.json`
- tests for PrivateKey cycling
- renamed form fields for clarity:
    - "private_key_cycle" -> "account_key__private_key_cycle"
    - "contact" -> "account__contact"
- added "resolved" AcmeChallenge search
- added "processing" AcmeChallenge search
- updated config validation on:
    `queue_domains_min_per_cert`
    `queue_domains_max_per_cert`
- removed "returned" exception objects, which were a terrible idea
- updated (json.dumps) to use `sort_keys=True` as needed
- (queue-domains/process(.json)?) working and tested
- `acme-order/new/automated` is now `acme-order/new/freeform`
- slight reorganization of queue-certificates listing and logic
- creating queue-certificates/structured largely done
- consolidated domain blacklist checks to a new `validate` file
- split AcmeAccountKey into AcmeAccount+AcmeAccountKey to support key cycling/rollover (in the future)
    - "account_key__private_key_cycle" -> "account__private_key_cycle"
    AcmeOrder:
        acme_account_key_id -> acme_account_id
        acme_account_key -> acme_account
    ServerCertificate:
        acme_account_key_id -> acme_account_id
        acme_account_key -> acme_account
    QueueCertificate:
        acme_account_key_id -> acme_account_id
        acme_account_key -> acme_account
    AcmeOrderless:
        acme_account_key_id -> acme_account_id
        acme_account_key -> acme_account
    OperationsObjectEvent
        acme_account_key_id -> acme_account_id